# atalanta

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  consumers.sh  my_data.csv  test_file.csv  wasabi-club.toml
.github/workflows/: main.yml
configs/: costa.toml  iceland-bonus-card.toml  stonegate.toml  tgi-fridays.toml  the-works.toml  visa-auth.toml  visa-settlement.toml  wasabi-club.toml
examples/: blobby.rs  consumer.rs  dynamic.rs  hello.rs  hermes_file_reader.rs  publisher.rs  sender_strategy.rs  sync_async.rs  write_hermes_file.rs  write_transaction.rs
files/: boreas-api-key  hermes_tokens.csv  perf_mids.csv  stonegate-transactions-api-key
services/: blobs.rs  mod.rs
src/: amqp.rs  configuration.rs  initialise.rs  lib.rs
src/consumers/: batch.rs  delay.rs  instant.rs  mod.rs
src/formatters/: amex.rs  amex_auth.rs  amex_settlement.rs  costa.rs  costa_metadata.json  costa_order_items.json  iceland.rs  mod.rs  stonegate.rs  stonegate_metadata.json  stonegate_order_items.json  tgi_fridays.rs  visa.rs  visa_auth.rs  visa_settlement.rs  wasabi.rs
src/models/: config.rs  configuration.rs  mod.rs  payment.rs  settings.rs
src/providers/: amex.rs  formatters.rs  iceland.rs  mod.rs  process.rs  visa.rs  wasabi.rs
src/senders/: amex.rs  api.rs  blob.rs  mod.rs  sftp.rs
src/services/: blob.rs
