[package]
name = "atalanta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6.2"
csv = "1.1"
env_logger = "0.10.0"
envy = "0.4.2"
log = "0.4.17"
rand = "0.8.5"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
