[package]
name = "atalanta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
axum = "0.7.1"
azure_core = "0.12.0"
azure_storage = "0.12.0"
azure_storage_blobs = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8.3"
color-eyre = "0.6.2"
csv = "1.1"
envy = "0.4.2"
eyre = "0.6.8"
futures = "0.3.28"
num = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rmp-serde = "1.1.1"
rust_decimal = "1.28.1"
rust_decimal_macros = "1.28.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
ssh2 = "0.9.4"
tokio = { version = "1.26.0", features = ["macros"] }
toml = "0.8.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.uuid]
version = "1.2.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
vendored-openssl = ["ssh2/vendored-openssl"]
