[package]
name = "atalanta"
version = "0.1.0"
edition = "2021"

[lints]
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.unwrap_used = "warn"
clippy.cast_possible_truncation = "allow"
clippy.cast_precision_loss = "allow"

[dependencies]
amiquip = "0.4"
axum = "0.7"
azure_core = "0.19"
azure_storage = "0.19"
azure_storage_blobs = "0.19"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
color-eyre = "0.6"
csv = "1.1"
envy = "0.4"
eyre = "0.6"
num = "0.4"
pollster = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rmp-serde = "1.1"
rust_decimal = "1.28"
rust_decimal_macros = "1.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
tokio = { version = "1.26", features = ["macros"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.uuid]
version = "1.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
pretty_assertions = "1.3"

[features]
vendored-openssl = ["ssh2/vendored-openssl"]
